--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -175,7 +175,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/mggude/Friend-Finder">GitHub
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/mggude/Friend">GitHub
                         Repo</a>
             </div>
         </footer>
