--- a/app/public/home.html
+++ b/app/public/home.html
@@ -30,7 +30,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/mggude/Friend-Finder">GitHub Repo</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/mggude/Friend">GitHub Repo</a>
       </div>
     </footer>
 
